--- a/main.css
+++ b/main.css
@@ -28,9 +28,28 @@ li{
 .light-theme{
     --bg: var(--blue);
     --fontColor: var(--black);
+    --btnFontColor: var(--white)
+    --btnBg: var(--black)
 }
 
 .dark-theme{
-    --bg: var(--black)
-    --fontColor:var(--blue)
+    --bg: var(--black);
+    --fontColor: var(--blue);
+    --btnFontColor: var(--black)
+    --btnBg: var(--white)
 }
+.btn{
+    color: var(--btnFontColor);
+    background-color: var(--btnBg);
+    position: absolute;
+    top: 20px;
+    left: 250px;
+    height: 50px;
+    width:50px;
+    border-radius: 50%;
+    border: none;
+    color: var(--btnFontColor);
+    background-color: var(--btnBg)
+}
+
+.btn: :focus { outline-style: none; }
